[package]
name = "clip"
version = "0.1.0-dev"
edition = "2021"
authors = ["Støjmaskiner <panierilorenzo@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://stoejmaskiner.github.io"
description = "Simple ergonomic clipper"

[features]
draw_gizmos = []
profile = []

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
atomic_float = "0.1"
array-macro = "2.1.5"
num-traits = "0.2.15"
static_assertions = "1.1.0"
fastapprox = "0.3.0"
wide = { version = "0.7.10", features = ["std"] }
fast-math = "0.1.1"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
itertools-num = "0.1.3"

[[bench]]
name = "dsp"
harness = false

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
